--- a/index.html
+++ b/index.html
@@ -34,28 +34,12 @@
         Edited by <a href="https://github.com/hanssy130" target="_blank">Hans Sy</a>
     </div>
 
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.0.1/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-        
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-            apiKey: "AIzaSyBCL_sLLC1TzQRyv1RmbiJrthZ4eJjxvTc",
-            authDomain: "thrivemetronome.firebaseapp.com",
-            projectId: "thrivemetronome",
-            storageBucket: "thrivemetronome.appspot.com",
-            messagingSenderId: "963127805966",
-            appId: "1:963127805966:web:cfc9e023d5d9265d79545f",
-            measurementId: "G-HYJS8TEJGL"
-        };
-        
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
+    <!--Firestore Libraries-->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+    <script>
+
     </script>
     <script src="metronome.js"></script>
     <script src="app.js"></script>
