figured out can't auto do sound

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="title">Simple Metronome</div>
     <button id="play-button" class="">
-        <div id="play-pause-icon" class="play"></div>
+        <div id="play-pause-icon"></div>
     </button>
 
     <div class="tempo-controls">
@@ -17,7 +17,7 @@
         <button class="tempo-change" data-change="-1">-</button>
 
         <div class="tempo-container">
-            <div id="tempo">120</div>
+            <div id="tempo"></div>
             <div class="bpm">bpm</div>
         </div>
 
