--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Metronome</title>
-    <link rel="stylesheet" href="style.css">
+    <link type="text/css" href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <div class="title">Simple Metronome</div>
@@ -41,7 +41,7 @@
     <script>
 
     </script>
-    <script src="metronome.js"></script>
-    <script src="app.js"></script>
+    <script src="js/metronome.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
