--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link type="text/css" href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="title">Simple Metronome</div>
+    <div class="title">Thrive Church<br>Metronome</div>
     <button id="play-button" class="">
         <div id="play-pause-icon"></div>
     </button>
